// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@tonal/key > C minor chords 1`] = `
[
  {
    "name": "Cm7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Dm7b5",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Ebmaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Fm7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Gm7",
    "roles": [
      "D",
      "ii/IV",
    ],
  },
  {
    "name": "Abmaj7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Bb7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "G7",
    "roles": [
      "V/I",
      "D",
    ],
  },
  {
    "name": "C7",
    "roles": [
      "V/IV",
    ],
  },
  {
    "name": "D7",
    "roles": [
      "V/V",
    ],
  },
  {
    "name": "Eb7",
    "roles": [
      "V/bVI",
      "subV/II",
    ],
  },
  {
    "name": "F7",
    "roles": [
      "V/bVII",
      "SD",
    ],
  },
  {
    "name": "Dm7",
    "roles": [
      "ii/I",
      "SD",
    ],
  },
  {
    "name": "Am7",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Bbm7b5",
    "roles": [
      "ii/bVI",
    ],
  },
  {
    "name": "Cm7b5",
    "roles": [
      "ii/bVII",
    ],
  },
  {
    "name": "Db7",
    "roles": [
      "subV/I",
    ],
  },
  {
    "name": "Gb7",
    "roles": [
      "subV/IV",
    ],
  },
  {
    "name": "Ab7",
    "roles": [
      "subV/V",
    ],
  },
  {
    "name": "Bbb7",
    "roles": [
      "subV/bVI",
    ],
  },
  {
    "name": "Cb7",
    "roles": [
      "subV/bVII",
    ],
  },
  {
    "name": "Abm7",
    "roles": [
      "subii/I",
    ],
  },
  {
    "name": "Dbm7",
    "roles": [
      "subii/IV",
    ],
  },
  {
    "name": "Ebm7",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Fbm7b5",
    "roles": [
      "subii/bVI",
    ],
  },
  {
    "name": "Gbm7b5",
    "roles": [
      "subii/bVII",
    ],
  },
  {
    "name": "CmMaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Eb+maj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bo7",
    "roles": [
      "D",
    ],
  },
  {
    "name": "Am7b5",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Ebm7b5",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Cm6",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bm7b5",
    "roles": [],
  },
  {
    "name": "A7",
    "roles": [
      "V/II",
    ],
  },
  {
    "name": "Em7",
    "roles": [
      "ii/II",
    ],
  },
  {
    "name": "Gm7b5",
    "roles": [
      "ii/IV",
    ],
  },
  {
    "name": "Bbm7",
    "roles": [
      "subii/II",
    ],
  },
  {
    "name": "Dbm7b5",
    "roles": [
      "subii/IV",
    ],
  },
]
`;

exports[`@tonal/key C major 1`] = `
{
  "alteration": 0,
  "chordScales": [
    "C major",
    "D dorian",
    "E phrygian",
    "F lydian",
    "G mixolydian",
    "A minor",
    "B locrian",
  ],
  "chords": [
    "Cmaj7",
    "Dm7",
    "Em7",
    "Fmaj7",
    "G7",
    "Am7",
    "Bm7b5",
  ],
  "chordsHarmonicFunction": [
    "T",
    "SD",
    "T",
    "SD",
    "D",
    "T",
    "D",
  ],
  "grades": [
    "I",
    "II",
    "III",
    "IV",
    "V",
    "VI",
    "VII",
  ],
  "intervals": [
    "1P",
    "2M",
    "3M",
    "4P",
    "5P",
    "6M",
    "7M",
  ],
  "keySignature": "",
  "minorRelative": "A",
  "scale": [
    "C",
    "D",
    "E",
    "F",
    "G",
    "A",
    "B",
  ],
  "secondaryDominantSupertonics": [
    "",
    "Em7",
    "F#m7",
    "Gm7b5",
    "Am7b5",
    "Bm7",
    "",
  ],
  "secondaryDominants": [
    "",
    "A7",
    "B7",
    "C7",
    "D7",
    "E7",
    "",
  ],
  "secondaryDominantsMinorRelative": [
    "",
    "Em7",
    "F#m7",
    "Gm7b5",
    "Am7b5",
    "Bm7",
    "",
  ],
  "substituteDominantSupertonics": [
    "",
    "Bbm7",
    "Cm7",
    "Dbm7b5",
    "Ebm7b5",
    "Fm7",
    "",
  ],
  "substituteDominants": [
    "",
    "Eb7",
    "F7",
    "Gb7",
    "Ab7",
    "Bb7",
    "",
  ],
  "substituteDominantsMinorRelative": [
    "",
    "Bbm7",
    "Cm7",
    "Dbm7b5",
    "Ebm7b5",
    "Fm7",
    "",
  ],
  "tonic": "C",
  "triads": [
    "C",
    "Dm",
    "Em",
    "F",
    "G",
    "Am",
    "Bdim",
  ],
  "type": "major",
}
`;

exports[`@tonal/key C major chords 1`] = `
[
  {
    "name": "Cmaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Dm7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Em7",
    "roles": [
      "T",
      "ii/II",
    ],
  },
  {
    "name": "Fmaj7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "G7",
    "roles": [
      "D",
    ],
  },
  {
    "name": "Am7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bm7b5",
    "roles": [
      "D",
    ],
  },
  {
    "name": "A7",
    "roles": [
      "V/II",
    ],
  },
  {
    "name": "B7",
    "roles": [
      "V/III",
    ],
  },
  {
    "name": "C7",
    "roles": [
      "V/IV",
    ],
  },
  {
    "name": "D7",
    "roles": [
      "V/V",
    ],
  },
  {
    "name": "E7",
    "roles": [
      "V/VI",
    ],
  },
  {
    "name": "F#m7",
    "roles": [
      "ii/III",
    ],
  },
  {
    "name": "Gm7b5",
    "roles": [
      "ii/IV",
    ],
  },
  {
    "name": "Am7b5",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Bm7",
    "roles": [
      "ii/VI",
    ],
  },
  {
    "name": "Eb7",
    "roles": [
      "subV/II",
    ],
  },
  {
    "name": "F7",
    "roles": [
      "subV/III",
    ],
  },
  {
    "name": "Gb7",
    "roles": [
      "subV/IV",
    ],
  },
  {
    "name": "Ab7",
    "roles": [
      "subV/V",
    ],
  },
  {
    "name": "Bb7",
    "roles": [
      "subV/VI",
    ],
  },
  {
    "name": "Bbm7",
    "roles": [
      "subii/II",
    ],
  },
  {
    "name": "Cm7",
    "roles": [
      "subii/III",
    ],
  },
  {
    "name": "Dbm7b5",
    "roles": [
      "subii/IV",
    ],
  },
  {
    "name": "Ebm7b5",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Fm7",
    "roles": [
      "subii/VI",
    ],
  },
]
`;

exports[`@tonal/key C minor chords 1`] = `
[
  {
    "name": "Cm7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Dm7b5",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Ebmaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Fm7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Gm7",
    "roles": [
      "D",
      "ii/IV",
    ],
  },
  {
    "name": "Abmaj7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Bb7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "G7",
    "roles": [
      "V/I",
      "D",
    ],
  },
  {
    "name": "C7",
    "roles": [
      "V/IV",
    ],
  },
  {
    "name": "D7",
    "roles": [
      "V/V",
    ],
  },
  {
    "name": "Eb7",
    "roles": [
      "V/bVI",
      "subV/II",
    ],
  },
  {
    "name": "F7",
    "roles": [
      "V/bVII",
      "SD",
    ],
  },
  {
    "name": "Dm7",
    "roles": [
      "ii/I",
      "SD",
    ],
  },
  {
    "name": "Am7",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Bbm7b5",
    "roles": [
      "ii/bVI",
    ],
  },
  {
    "name": "Cm7b5",
    "roles": [
      "ii/bVII",
    ],
  },
  {
    "name": "Db7",
    "roles": [
      "subV/I",
    ],
  },
  {
    "name": "Gb7",
    "roles": [
      "subV/IV",
    ],
  },
  {
    "name": "Ab7",
    "roles": [
      "subV/V",
    ],
  },
  {
    "name": "Bbb7",
    "roles": [
      "subV/bVI",
    ],
  },
  {
    "name": "Cb7",
    "roles": [
      "subV/bVII",
    ],
  },
  {
    "name": "Abm7",
    "roles": [
      "subii/I",
    ],
  },
  {
    "name": "Dbm7",
    "roles": [
      "subii/IV",
    ],
  },
  {
    "name": "Ebm7",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Fbm7b5",
    "roles": [
      "subii/bVI",
    ],
  },
  {
    "name": "Gbm7b5",
    "roles": [
      "subii/bVII",
    ],
  },
  {
    "name": "CmMaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Eb+maj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bo7",
    "roles": [
      "D",
    ],
  },
  {
    "name": "Am7b5",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Ebm7b5",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Cm6",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bm7b5",
    "roles": [],
  },
  {
    "name": "A7",
    "roles": [
      "V/II",
    ],
  },
  {
    "name": "Em7",
    "roles": [
      "ii/II",
    ],
  },
  {
    "name": "Gm7b5",
    "roles": [
      "ii/IV",
    ],
  },
  {
    "name": "Bbm7",
    "roles": [
      "subii/II",
    ],
  },
  {
    "name": "Dbm7b5",
    "roles": [
      "subii/IV",
    ],
  },
]
`;

exports[`@tonal/key majorKeys 1`] = `
{
  "alteration": 3,
  "chordScales": [
    "A major",
    "B dorian",
    "C# phrygian",
    "D lydian",
    "E mixolydian",
    "F# minor",
    "G# locrian",
  ],
  "chords": [
    "Amaj7",
    "Bm7",
    "C#m7",
    "Dmaj7",
    "E7",
    "F#m7",
    "G#m7b5",
  ],
  "chordsHarmonicFunction": [
    "T",
    "SD",
    "T",
    "SD",
    "D",
    "T",
    "D",
  ],
  "grades": [
    "I",
    "II",
    "III",
    "IV",
    "V",
    "VI",
    "VII",
  ],
  "intervals": [
    "1P",
    "2M",
    "3M",
    "4P",
    "5P",
    "6M",
    "7M",
  ],
  "keySignature": "###",
  "minorRelative": "F#",
  "scale": [
    "A",
    "B",
    "C#",
    "D",
    "E",
    "F#",
    "G#",
  ],
  "secondaryDominantSupertonics": [
    "",
    "C#m7",
    "D#m7",
    "Em7b5",
    "F#m7b5",
    "G#m7",
    "",
  ],
  "secondaryDominants": [
    "",
    "F#7",
    "G#7",
    "A7",
    "B7",
    "C#7",
    "",
  ],
  "secondaryDominantsMinorRelative": [
    "",
    "C#m7",
    "D#m7",
    "Em7b5",
    "F#m7b5",
    "G#m7",
    "",
  ],
  "substituteDominantSupertonics": [
    "",
    "Gm7",
    "Am7",
    "Bbm7b5",
    "Cm7b5",
    "Dm7",
    "",
  ],
  "substituteDominants": [
    "",
    "C7",
    "D7",
    "Eb7",
    "F7",
    "G7",
    "",
  ],
  "substituteDominantsMinorRelative": [
    "",
    "Gm7",
    "Am7",
    "Bbm7b5",
    "Cm7b5",
    "Dm7",
    "",
  ],
  "tonic": "A",
  "triads": [
    "A",
    "Bm",
    "C#m",
    "D",
    "E",
    "F#m",
    "G#dim",
  ],
  "type": "major",
}
`;

exports[`@tonal/key majorKeys 2`] = `
{
  "alteration": -2,
  "chordScales": [
    "Bb major",
    "C dorian",
    "D phrygian",
    "Eb lydian",
    "F mixolydian",
    "G minor",
    "A locrian",
  ],
  "chords": [
    "Bbmaj7",
    "Cm7",
    "Dm7",
    "Ebmaj7",
    "F7",
    "Gm7",
    "Am7b5",
  ],
  "chordsHarmonicFunction": [
    "T",
    "SD",
    "T",
    "SD",
    "D",
    "T",
    "D",
  ],
  "grades": [
    "I",
    "II",
    "III",
    "IV",
    "V",
    "VI",
    "VII",
  ],
  "intervals": [
    "1P",
    "2M",
    "3M",
    "4P",
    "5P",
    "6M",
    "7M",
  ],
  "keySignature": "bb",
  "minorRelative": "G",
  "scale": [
    "Bb",
    "C",
    "D",
    "Eb",
    "F",
    "G",
    "A",
  ],
  "secondaryDominantSupertonics": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "secondaryDominants": [
    "",
    "G7",
    "A7",
    "Bb7",
    "C7",
    "D7",
    "",
  ],
  "secondaryDominantsMinorRelative": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "substituteDominantSupertonics": [
    "",
    "Abm7",
    "Bbm7",
    "Cbm7b5",
    "Dbm7b5",
    "Ebm7",
    "",
  ],
  "substituteDominants": [
    "",
    "Db7",
    "Eb7",
    "Fb7",
    "Gb7",
    "Ab7",
    "",
  ],
  "substituteDominantsMinorRelative": [
    "",
    "Abm7",
    "Bbm7",
    "Cbm7b5",
    "Dbm7b5",
    "Ebm7",
    "",
  ],
  "tonic": "Bb",
  "triads": [
    "Bb",
    "Cm",
    "Dm",
    "Eb",
    "F",
    "Gm",
    "Adim",
  ],
  "type": "major",
}
`;

exports[`@tonal/key majorKeys 3`] = `
{
  "alteration": 4,
  "chordScales": [
    "E major",
    "F# dorian",
    "G# phrygian",
    "A lydian",
    "B mixolydian",
    "C# minor",
    "D# locrian",
  ],
  "chords": [
    "Emaj7",
    "F#m7",
    "G#m7",
    "Amaj7",
    "B7",
    "C#m7",
    "D#m7b5",
  ],
  "chordsHarmonicFunction": [
    "T",
    "SD",
    "T",
    "SD",
    "D",
    "T",
    "D",
  ],
  "grades": [
    "I",
    "II",
    "III",
    "IV",
    "V",
    "VI",
    "VII",
  ],
  "intervals": [
    "1P",
    "2M",
    "3M",
    "4P",
    "5P",
    "6M",
    "7M",
  ],
  "keySignature": "####",
  "minorRelative": "C#",
  "scale": [
    "E",
    "F#",
    "G#",
    "A",
    "B",
    "C#",
    "D#",
  ],
  "secondaryDominantSupertonics": [
    "",
    "G#m7",
    "A#m7",
    "Bm7b5",
    "C#m7b5",
    "D#m7",
    "",
  ],
  "secondaryDominants": [
    "",
    "C#7",
    "D#7",
    "E7",
    "F#7",
    "G#7",
    "",
  ],
  "secondaryDominantsMinorRelative": [
    "",
    "G#m7",
    "A#m7",
    "Bm7b5",
    "C#m7b5",
    "D#m7",
    "",
  ],
  "substituteDominantSupertonics": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "substituteDominants": [
    "",
    "G7",
    "A7",
    "Bb7",
    "C7",
    "D7",
    "",
  ],
  "substituteDominantsMinorRelative": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "tonic": "E",
  "triads": [
    "E",
    "F#m",
    "G#m",
    "A",
    "B",
    "C#m",
    "D#dim",
  ],
  "type": "major",
}
`;

exports[`@tonal/key minorKey 1`] = `
{
  "alteration": -3,
  "harmonic": {
    "chordScales": [
      "C harmonic minor",
      "D locrian 6",
      "Eb major augmented",
      "F lydian diminished",
      "G phrygian dominant",
      "Ab lydian #9",
      "B ultralocrian",
    ],
    "chords": [
      "CmMaj7",
      "Dm7b5",
      "Eb+maj7",
      "Fm7",
      "G7",
      "Abmaj7",
      "Bo7",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "SD",
      "D",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "bVI",
      "VII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6m",
      "7M",
    ],
    "scale": [
      "C",
      "D",
      "Eb",
      "F",
      "G",
      "Ab",
      "B",
    ],
    "secondaryDominantSupertonics": [
      "",
      "",
      "",
      "Gm7",
      "Am7b5",
      "Bbm7b5",
      "",
    ],
    "secondaryDominants": [
      "",
      "",
      "",
      "C7",
      "D7",
      "Eb7",
      "",
    ],
    "secondaryDominantsMinorRelative": [
      "",
      "",
      "",
      "Gm7",
      "Am7b5",
      "Bbm7b5",
      "",
    ],
    "substituteDominantSupertonics": [
      "",
      "",
      "",
      "Dbm7",
      "Ebm7b5",
      "Fbm7b5",
      "",
    ],
    "substituteDominants": [
      "",
      "",
      "",
      "Gb7",
      "Ab7",
      "Bbb7",
      "",
    ],
    "substituteDominantsMinorRelative": [
      "",
      "",
      "",
      "Dbm7",
      "Ebm7b5",
      "Fbm7b5",
      "",
    ],
    "tonic": "C",
    "triads": [
      "Cm",
      "Ddim",
      "Ebaug",
      "Fm",
      "G",
      "Ab",
      "Bdim",
    ],
  },
  "keySignature": "bbb",
  "melodic": {
    "chordScales": [
      "C melodic minor",
      "D dorian b2",
      "Eb lydian augmented",
      "F lydian dominant",
      "G mixolydian b6",
      "A locrian #2",
      "B altered",
    ],
    "chords": [
      "Cm6",
      "Dm7",
      "Eb+maj7",
      "F7",
      "G7",
      "Am7b5",
      "Bm7b5",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "",
      "",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "VI",
      "VII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6M",
      "7M",
    ],
    "scale": [
      "C",
      "D",
      "Eb",
      "F",
      "G",
      "A",
      "B",
    ],
    "secondaryDominantSupertonics": [
      "",
      "Em7",
      "",
      "Gm7b5",
      "Am7b5",
      "",
      "",
    ],
    "secondaryDominants": [
      "",
      "A7",
      "",
      "C7",
      "D7",
      "",
      "",
    ],
    "secondaryDominantsMinorRelative": [
      "",
      "Em7",
      "",
      "Gm7b5",
      "Am7b5",
      "",
      "",
    ],
    "substituteDominantSupertonics": [
      "",
      "Bbm7",
      "",
      "Dbm7b5",
      "Ebm7b5",
      "",
      "",
    ],
    "substituteDominants": [
      "",
      "Eb7",
      "",
      "Gb7",
      "Ab7",
      "",
      "",
    ],
    "substituteDominantsMinorRelative": [
      "",
      "Bbm7",
      "",
      "Dbm7b5",
      "Ebm7b5",
      "",
      "",
    ],
    "tonic": "C",
    "triads": [
      "Cm",
      "Dm",
      "Ebaug",
      "F",
      "G",
      "Adim",
      "Bdim",
    ],
  },
  "natural": {
    "chordScales": [
      "C minor",
      "D locrian",
      "Eb major",
      "F dorian",
      "G phrygian",
      "Ab lydian",
      "Bb mixolydian",
    ],
    "chords": [
      "Cm7",
      "Dm7b5",
      "Ebmaj7",
      "Fm7",
      "Gm7",
      "Abmaj7",
      "Bb7",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "SD",
      "SD",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "bVI",
      "bVII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6m",
      "7m",
    ],
    "scale": [
      "C",
      "D",
      "Eb",
      "F",
      "G",
      "Ab",
      "Bb",
    ],
    "secondaryDominantSupertonics": [
      "Dm7",
      "",
      "",
      "Gm7",
      "Am7",
      "Bbm7b5",
      "Cm7b5",
    ],
    "secondaryDominants": [
      "G7",
      "",
      "",
      "C7",
      "D7",
      "Eb7",
      "F7",
    ],
    "secondaryDominantsMinorRelative": [
      "Dm7",
      "",
      "",
      "Gm7",
      "Am7",
      "Bbm7b5",
      "Cm7b5",
    ],
    "substituteDominantSupertonics": [
      "Abm7",
      "",
      "",
      "Dbm7",
      "Ebm7",
      "Fbm7b5",
      "Gbm7b5",
    ],
    "substituteDominants": [
      "Db7",
      "",
      "",
      "Gb7",
      "Ab7",
      "Bbb7",
      "Cb7",
    ],
    "substituteDominantsMinorRelative": [
      "Abm7",
      "",
      "",
      "Dbm7",
      "Ebm7",
      "Fbm7b5",
      "Gbm7b5",
    ],
    "tonic": "C",
    "triads": [
      "Cm",
      "Ddim",
      "Eb",
      "Fm",
      "Gm",
      "Ab",
      "Bb",
    ],
  },
  "relativeMajor": "Eb",
  "tonic": "C",
  "type": "minor",
}
`;

exports[`@tonal/key minorKey 2`] = `
{
  "alteration": -5,
  "harmonic": {
    "chordScales": [
      "Bb harmonic minor",
      "C locrian 6",
      "Db major augmented",
      "Eb lydian diminished",
      "F phrygian dominant",
      "Gb lydian #9",
      "A ultralocrian",
    ],
    "chords": [
      "BbmMaj7",
      "Cm7b5",
      "Db+maj7",
      "Ebm7",
      "F7",
      "Gbmaj7",
      "Ao7",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "SD",
      "D",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "bVI",
      "VII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6m",
      "7M",
    ],
    "scale": [
      "Bb",
      "C",
      "Db",
      "Eb",
      "F",
      "Gb",
      "A",
    ],
    "secondaryDominantSupertonics": [
      "",
      "",
      "",
      "Fm7",
      "Gm7b5",
      "Abm7b5",
      "",
    ],
    "secondaryDominants": [
      "",
      "",
      "",
      "Bb7",
      "C7",
      "Db7",
      "",
    ],
    "secondaryDominantsMinorRelative": [
      "",
      "",
      "",
      "Fm7",
      "Gm7b5",
      "Abm7b5",
      "",
    ],
    "substituteDominantSupertonics": [
      "",
      "",
      "",
      "Cbm7",
      "Dbm7b5",
      "Ebbm7b5",
      "",
    ],
    "substituteDominants": [
      "",
      "",
      "",
      "Fb7",
      "Gb7",
      "Abb7",
      "",
    ],
    "substituteDominantsMinorRelative": [
      "",
      "",
      "",
      "Cbm7",
      "Dbm7b5",
      "Ebbm7b5",
      "",
    ],
    "tonic": "Bb",
    "triads": [
      "Bbm",
      "Cdim",
      "Dbaug",
      "Ebm",
      "F",
      "Gb",
      "Adim",
    ],
  },
  "keySignature": "bbbbb",
  "melodic": {
    "chordScales": [
      "Bb melodic minor",
      "C dorian b2",
      "Db lydian augmented",
      "Eb lydian dominant",
      "F mixolydian b6",
      "G locrian #2",
      "A altered",
    ],
    "chords": [
      "Bbm6",
      "Cm7",
      "Db+maj7",
      "Eb7",
      "F7",
      "Gm7b5",
      "Am7b5",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "",
      "",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "VI",
      "VII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6M",
      "7M",
    ],
    "scale": [
      "Bb",
      "C",
      "Db",
      "Eb",
      "F",
      "G",
      "A",
    ],
    "secondaryDominantSupertonics": [
      "",
      "Dm7",
      "",
      "Fm7b5",
      "Gm7b5",
      "",
      "",
    ],
    "secondaryDominants": [
      "",
      "G7",
      "",
      "Bb7",
      "C7",
      "",
      "",
    ],
    "secondaryDominantsMinorRelative": [
      "",
      "Dm7",
      "",
      "Fm7b5",
      "Gm7b5",
      "",
      "",
    ],
    "substituteDominantSupertonics": [
      "",
      "Abm7",
      "",
      "Cbm7b5",
      "Dbm7b5",
      "",
      "",
    ],
    "substituteDominants": [
      "",
      "Db7",
      "",
      "Fb7",
      "Gb7",
      "",
      "",
    ],
    "substituteDominantsMinorRelative": [
      "",
      "Abm7",
      "",
      "Cbm7b5",
      "Dbm7b5",
      "",
      "",
    ],
    "tonic": "Bb",
    "triads": [
      "Bbm",
      "Cm",
      "Dbaug",
      "Eb",
      "F",
      "Gdim",
      "Adim",
    ],
  },
  "natural": {
    "chordScales": [
      "Bb minor",
      "C locrian",
      "Db major",
      "Eb dorian",
      "F phrygian",
      "Gb lydian",
      "Ab mixolydian",
    ],
    "chords": [
      "Bbm7",
      "Cm7b5",
      "Dbmaj7",
      "Ebm7",
      "Fm7",
      "Gbmaj7",
      "Ab7",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "SD",
      "SD",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "bVI",
      "bVII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6m",
      "7m",
    ],
    "scale": [
      "Bb",
      "C",
      "Db",
      "Eb",
      "F",
      "Gb",
      "Ab",
    ],
    "secondaryDominantSupertonics": [
      "Cm7",
      "",
      "",
      "Fm7",
      "Gm7",
      "Abm7b5",
      "Bbm7b5",
    ],
    "secondaryDominants": [
      "F7",
      "",
      "",
      "Bb7",
      "C7",
      "Db7",
      "Eb7",
    ],
    "secondaryDominantsMinorRelative": [
      "Cm7",
      "",
      "",
      "Fm7",
      "Gm7",
      "Abm7b5",
      "Bbm7b5",
    ],
    "substituteDominantSupertonics": [
      "Gbm7",
      "",
      "",
      "Cbm7",
      "Dbm7",
      "Ebbm7b5",
      "Fbm7b5",
    ],
    "substituteDominants": [
      "Cb7",
      "",
      "",
      "Fb7",
      "Gb7",
      "Abb7",
      "Bbb7",
    ],
    "substituteDominantsMinorRelative": [
      "Gbm7",
      "",
      "",
      "Cbm7",
      "Dbm7",
      "Ebbm7b5",
      "Fbm7b5",
    ],
    "tonic": "Bb",
    "triads": [
      "Bbm",
      "Cdim",
      "Db",
      "Ebm",
      "Fm",
      "Gb",
      "Ab",
    ],
  },
  "relativeMajor": "Db",
  "tonic": "Bb",
  "type": "minor",
}
`;

exports[`@tonal/key minorKey 3`] = `
{
  "alteration": 2,
  "harmonic": {
    "chordScales": [
      "B harmonic minor",
      "C# locrian 6",
      "D major augmented",
      "E lydian diminished",
      "F# phrygian dominant",
      "G lydian #9",
      "A# ultralocrian",
    ],
    "chords": [
      "BmMaj7",
      "C#m7b5",
      "D+maj7",
      "Em7",
      "F#7",
      "Gmaj7",
      "A#o7",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "SD",
      "D",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "bVI",
      "VII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6m",
      "7M",
    ],
    "scale": [
      "B",
      "C#",
      "D",
      "E",
      "F#",
      "G",
      "A#",
    ],
    "secondaryDominantSupertonics": [
      "",
      "",
      "",
      "F#m7",
      "G#m7b5",
      "Am7b5",
      "",
    ],
    "secondaryDominants": [
      "",
      "",
      "",
      "B7",
      "C#7",
      "D7",
      "",
    ],
    "secondaryDominantsMinorRelative": [
      "",
      "",
      "",
      "F#m7",
      "G#m7b5",
      "Am7b5",
      "",
    ],
    "substituteDominantSupertonics": [
      "",
      "",
      "",
      "Cm7",
      "Dm7b5",
      "Ebm7b5",
      "",
    ],
    "substituteDominants": [
      "",
      "",
      "",
      "F7",
      "G7",
      "Ab7",
      "",
    ],
    "substituteDominantsMinorRelative": [
      "",
      "",
      "",
      "Cm7",
      "Dm7b5",
      "Ebm7b5",
      "",
    ],
    "tonic": "B",
    "triads": [
      "Bm",
      "C#dim",
      "Daug",
      "Em",
      "F#",
      "G",
      "A#dim",
    ],
  },
  "keySignature": "##",
  "melodic": {
    "chordScales": [
      "B melodic minor",
      "C# dorian b2",
      "D lydian augmented",
      "E lydian dominant",
      "F# mixolydian b6",
      "G# locrian #2",
      "A# altered",
    ],
    "chords": [
      "Bm6",
      "C#m7",
      "D+maj7",
      "E7",
      "F#7",
      "G#m7b5",
      "A#m7b5",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "",
      "",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "VI",
      "VII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6M",
      "7M",
    ],
    "scale": [
      "B",
      "C#",
      "D",
      "E",
      "F#",
      "G#",
      "A#",
    ],
    "secondaryDominantSupertonics": [
      "",
      "D#m7",
      "",
      "F#m7b5",
      "G#m7b5",
      "",
      "",
    ],
    "secondaryDominants": [
      "",
      "G#7",
      "",
      "B7",
      "C#7",
      "",
      "",
    ],
    "secondaryDominantsMinorRelative": [
      "",
      "D#m7",
      "",
      "F#m7b5",
      "G#m7b5",
      "",
      "",
    ],
    "substituteDominantSupertonics": [
      "",
      "Am7",
      "",
      "Cm7b5",
      "Dm7b5",
      "",
      "",
    ],
    "substituteDominants": [
      "",
      "D7",
      "",
      "F7",
      "G7",
      "",
      "",
    ],
    "substituteDominantsMinorRelative": [
      "",
      "Am7",
      "",
      "Cm7b5",
      "Dm7b5",
      "",
      "",
    ],
    "tonic": "B",
    "triads": [
      "Bm",
      "C#m",
      "Daug",
      "E",
      "F#",
      "G#dim",
      "A#dim",
    ],
  },
  "natural": {
    "chordScales": [
      "B minor",
      "C# locrian",
      "D major",
      "E dorian",
      "F# phrygian",
      "G lydian",
      "A mixolydian",
    ],
    "chords": [
      "Bm7",
      "C#m7b5",
      "Dmaj7",
      "Em7",
      "F#m7",
      "Gmaj7",
      "A7",
    ],
    "chordsHarmonicFunction": [
      "T",
      "SD",
      "T",
      "SD",
      "D",
      "SD",
      "SD",
    ],
    "grades": [
      "I",
      "II",
      "bIII",
      "IV",
      "V",
      "bVI",
      "bVII",
    ],
    "intervals": [
      "1P",
      "2M",
      "3m",
      "4P",
      "5P",
      "6m",
      "7m",
    ],
    "scale": [
      "B",
      "C#",
      "D",
      "E",
      "F#",
      "G",
      "A",
    ],
    "secondaryDominantSupertonics": [
      "C#m7",
      "",
      "",
      "F#m7",
      "G#m7",
      "Am7b5",
      "Bm7b5",
    ],
    "secondaryDominants": [
      "F#7",
      "",
      "",
      "B7",
      "C#7",
      "D7",
      "E7",
    ],
    "secondaryDominantsMinorRelative": [
      "C#m7",
      "",
      "",
      "F#m7",
      "G#m7",
      "Am7b5",
      "Bm7b5",
    ],
    "substituteDominantSupertonics": [
      "Gm7",
      "",
      "",
      "Cm7",
      "Dm7",
      "Ebm7b5",
      "Fm7b5",
    ],
    "substituteDominants": [
      "C7",
      "",
      "",
      "F7",
      "G7",
      "Ab7",
      "Bb7",
    ],
    "substituteDominantsMinorRelative": [
      "Gm7",
      "",
      "",
      "Cm7",
      "Dm7",
      "Ebm7b5",
      "Fm7b5",
    ],
    "tonic": "B",
    "triads": [
      "Bm",
      "C#dim",
      "D",
      "Em",
      "F#m",
      "G",
      "A",
    ],
  },
  "relativeMajor": "D",
  "tonic": "B",
  "type": "minor",
}
`;
